<resources>
    <string name="app_name">MoonRunner</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_feed">Feed</string>
    <string name="title_workout">Workout</string>
    <string name="title_more">More</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_choose_sport">ChooseSportActivity</string>
    <string name="gps_tab_activities">GPS based</string>
    <string name="non_gps_tab_activities">NON GPS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="remove">Delete</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="discard">Reject</string>
    <string name="friends">Friends</string>
    <string name="invitations">Invitations</string>
    <string name="loading">Loading</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="you">You</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="refresh">Refreshing</string>
    <string name="change">Change</string>
    <string name="uploaded">Uploaded!</string>
    <string name="register_toolbar_title">Register</string>
    <string name="register_email_in_use">This email is already in use</string>
    <string name="register_forget_password">Forgot password?</string>
    <string name="register_password_reset">Password has been reset. Check your e-mail</string>
    <string name="register_successful">Account created. Verify your email</string>
    <string name="register_failed">Failed to send email verification</string>
    <string name="register_required">This field is required</string>
    <string name="register_not_valid_name">Numbers, white spaces and special characters are not allowed here</string>
    <string name="register_invalid_email">Invalid email address</string>
    <string name="register_passwords_not_match">Passwords do not match</string>
    <string name="register_password_validation">Password must be eight characters including one uppercase letter, one special character and alphanumeric characters</string>
    <string name="register_progress_dialog">Processing…</string>
    <string name="register_first_name_hint">First name</string>
    <string name="register_surname_hint">Surname</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_register_button">Create account</string>
    <string name="register_back_to_login_button">Back to log in</string>
    <string name="login_toolbar_title">Log In</string>
    <string name="login_required">This field is required</string>
    <string name="login_progress_dialog">Logging…</string>
    <string name="login_email_not_verified">Address email is not verified</string>
    <string name="login_failed">Incorrect login or password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button">Log In</string>
    <string name="login_create_account_button">Create account</string>
    <string name="no_internet">No Internet connection</string>
    <string name="reset_password">Reset</string>
    <string name="provide_your_email">Enter your email!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="location_tracking_notification_title">MoonRunner</string>
    <string name="location_tracking_notification_body">00:00:00</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="resume_action_button">Resume</string>
    <string name="pause_action_button">Pause</string>
    <string name="pause_action_content_text">Paused</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_internet">Internet connection is required to save training</string>
    <string name="internet_connection_needed">Internet connection is required</string>
    <string name="internet_rationale">Internet connection is needed for core functionality</string>
    <string name="enable_gps_to_check_weather">Enable GPS in order to check weather</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="remove_friend">Delete friend?</string>
    <string name="add_friend_button">Add friend</string>
    <string name="request_type_sent">Sent</string>
    <string name="request_type_received">Accept</string>
    <string name="user_is_already_a_friends">This user is already your friend</string>
    <string name="can_not_send_invitation_to_yrself">You cannot invite yourself</string>
    <string name="no_new_invitations">No new invitations</string>
    <string name="no_friends">You do not have friends</string>
    <string name="new_invitation">New invitation</string>
    <string name="remove_friend_confirmation">Cancel invitation?</string>
    <string name="friends_dialog_add_button">Add</string>
    <string name="friends_dialog_cancel_button">Cancel</string>
    <string name="friends_dialog_already_sent">Invitation has been sent earlier</string>
    <string name="friends_dialog_invitation_sent">Invitation sent</string>
    <string name="friends_dialog_wrong_email">There is no user with that email address</string>
    <string name="friends_dialog_title">Add friend</string>
    <string name="friends_dialog_email_field">Email</string>
    <string name="confirm_password_dialog_title">Enter password</string>
    <string name="confirm_password_cancel_button">Cancel</string>
    <string name="confirm_password_confirm_button">Confirm</string>
    <string name="edit_profile_activity_title">Edit profile</string>
    <string name="edit_profile_new_password_hint">New password</string>
    <string name="edit_profile_chooser_title">Select picture</string>
    <string name="edit_profile_choose_avatar">Browse…</string>
    <string name="edit_profile_save_changes">Save changes</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="profile_details_activity_title">Profile</string>
    <string name="edit_profile_profile_activity">Edit profile</string>
    <string name="no_your_workouts">You have not done any training yet</string>
    <string name="no_friends_workouts">Your friends have not done any training yet</string>
    <string name="summary">Summary</string>
    <string name="duration">Time</string>
    <string name="avg_pace">Avg pace</string>
    <string name="avg_speed">Avg speed</string>
    <string name="distance">Distance</string>
    <string name="max_pace">Max pace</string>
    <string name="max_speed">Max speed</string>
    <string name="description">Description</string>
    <string name="add_description">Add description</string>
    <string name="photo">Photo</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="who_can_see">Who can see:</string>
    <string name="weather">Weather</string>
    <string name="laps">Laps</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="save">Save</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_camera_gallery">Pick action:</string>
    <string name="title_activity_choose_workout2">ChooseWorkoutActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="details">Details</string>
    <string name="updated">Updated:</string>
    <string name="hello">Hello</string>
    <string name="no_workouts_yet">No workouts yet, time to change it!</string>
    <string name="start">Start</string>
    <string name="activity">Activity</string>
    <string name="music">Music</string>
    <string name="permission_rationale_settings">Go to settings in order to change permissions</string>
    <string name="storage_permission_rationale">Storage permission is needed</string>
    <string name="camera_permission_rationale">Camera permission is needed</string>
    <string name="confirm_delete_workout">Are you sure to delete workout?</string>
    <string name="workout_deleted">Workout deleted</string>
    <string name="beginning">Beginning</string>
    <string name="end">End</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="workout_saved">Workout saved</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="only_me">Only me</string>
    <string name="new_post_swipe_to_refresh">New post, swipe to refresh</string>
    <string name="edit_to_add_description">Edit to add description</string>
    <string name="photo_delete_confirmation">Are you sure to delete picture?</string>
    <string name="pick_settings">Choose settings</string>
    <string name="have_unsaved_changes">Unsaved changes!</string>
    <string name="still_want_to_exit">Still want to go back?</string>
    <string name="changes_saved">Changes saved</string>
    <string name="photo_will_be_deleted_after_saving">Photo will be deleted after saving</string>
    <string name="title_activity_find_others">FindOthersActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete account</string>
    <string name="deletion_account_confirmation">Are you sure to DELETE account?</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="account_deleted">Account deleted</string>
    <string name="provide_email">Enter email:</string>
    <string name="find_others_title">Find others</string>
    <string name="no_results_in_given_range">No results in given range</string>
    <string name="input_range">Enter range</string>
    <string name="invalid_number">Not a number</string>
    <string name="no_results">No results</string>
    <string name="no_shares">You have not shared any locations!</string>
    <string name="delete_confirmation">Are you sure to delete this?</string>
    <string name="message_can_not_be_empty">Message can not be empty</string>
    <string name="share_location_title">Share!</string>
    <string name="choose_activity">Choose activity:</string>
    <string name="enter_msg">Enter message</string>
    <string name="preview">Preview</string>
    <string name="what_radius">What radius in kilometers to use?</string>
    <string name="example_radius">Example: 3.5</string>
    <string name="search">Search</string>
    <string name="results">Results:</string>
    <string name="your_shares">Your shares</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="show_profile">Show profile</string>
    <string name="invite_to_friends">Invite to friends</string>
    <string name="distance_to_you">Distance to you:</string>
    <string name="already_a_friends">Already a friend</string>
    <string name="workouts">Workouts</string>
</resources>